--- a/public/pages/1-tema.html
+++ b/public/pages/1-tema.html
@@ -26,71 +26,40 @@
                     <td> <img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/4.jpg" /></td>
                 </tr>
             </table>
-            <div class="hr-divider my-5">
-                <div class="row mt-5">
-                    <div class="col-12"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-3">
-                    <div class="customTable"> </div>
-                    <div class="customTable_row_header">
-                        <div class="customTable_cell"></div>
-                        <p><strong>ENFOQUE</strong></p>
-                        <div class="customTable_cell"></div>
-                        <p><strong>CUANTITATIVO</strong></p>
-                        <div class="customTable_cell"></div>
-                        <p><strong>CUALITATIVO</strong></p>
-                        <div class="customTable_cell"></div>
-                        <p><strong>MIXTO</strong></p>
-                    </div>
-                    <div class="customTable_row">
-                        <div class="customTable_cell" data-title="Norma"></div>
-                        <p>Resolución 666</p>
-                        <div class="customTable_cell" data-title="Año"></div>
-                        <p>2020 (24 abril)</p>
-                        <div class="customTable_cell" data-title="Componente"></div>
-                        <p>Por medio del cual se adopta el protocolo general de bioseguridad para mitigar, controlar y realizar el adecuado manejo de la pandemia del coronavirus COVID-19.</p>
-                        <div class="customTable_cell" data-title="Enlace"></div><a href="media/documentos/Resolución No. 666 de 2020.pdf" target="_blank"> <img src="assets/images/pages/tema_1/icon_PDF.svg" alt="" style="width:35px" /></a>
-                    </div>
-                    <div class="customTable_row">
-                        <div class="customTable_cell" data-title="Norma"></div>
-                        <p>Lineamientos PAI en el contexto de la pandemia </p>
-                        <div class="customTable_cell" data-title="Año"></div>
-                        <p>23 julio 2020</p>
-                        <div class="customTable_cell" data-title="Componente"></div>
-                        <p>Lineamientos generales para el PAI en el contexto de la pandemia de COVID-19.</p>
-                        <div class="customTable_cell" data-title="Enlace"></div><a href="media/documentos/GIPS15.pdf" target="_blank"> <img src="assets/images/pages/tema_1/icon_PDF.svg" alt="" style="width:35px" /></a>
-                    </div>
-                    <div class="customTable_row">
-                        <div class="customTable_cell" data-title="Norma"></div>
-                        <p>Decreto 1270 </p>
-                        <div class="customTable_cell" data-title="Año"></div>
-                        <p>18 de septiembre 2020</p>
-                        <div class="customTable_cell" data-title="Componente"></div>
-                        <p>Por el cual se crea el Comité Asesor del Ministerio para el proceso estratégico de inmunización de la población colombiana frente a COVID-19.</p>
-                        <div class="customTable_cell" data-title="Enlace"></div><a href="media/documentos/Decreto_1270_18_Sept_2020.pdf" target="_blank"> <img src="assets/images/pages/tema_1/icon_PDF.svg" alt="" style="width:35px" /></a>
-                    </div>
-                    <div class="customTable_row">
-                        <div class="customTable_cell" data-title="Norma"></div>
-                        <p>Resolución 1628 </p>
-                        <div class="customTable_cell" data-title="Año"></div>
-                        <p>15 de septiembre 2020</p>
-                        <div class="customTable_cell" data-title="Componente"></div>
-                        <p>Por la cual se crea y modifica la integración de la instancia de Coordinación y Asesoría para el Acceso a Vacunas Seguras y Eficaces contra el coronavirus SARS-CoV-2 (COVID-19).</p>
-                        <div class="customTable_cell" data-title="Enlace"></div><a href="media/documentos/Resolución No. 1628 de 2020.pdf" target="_blank"> <img src="assets/images/pages/tema_1/icon_PDF.svg" alt="" style="width:35px" /></a>
-                    </div>
-                    <div class="customTable_row">
-                        <div class="customTable_cell" data-title="Norma"></div>
-                        <p>Resolución 2272 </p>
-                        <div class="customTable_cell" data-title="Año"></div>
-                        <p>4 de diciembre 2020</p>
-                        <div class="customTable_cell" data-title="Componente"></div>
-                        <p>Por la cual se crea y modifica la integración de la instancia de Coordinación y Asesoría para el Acceso a Vacunas Seguras y Eficaces contra el coronavirus SARS-CoV-2 (COVID-19).</p>
-                        <div class="customTable_cell" data-title="Enlace"></div><a href="media/documentos/resolucion-2272-de-2020.pdf" target="_blank"> <img src="assets/images/pages/tema_1/icon_PDF.svg" alt="" style="width:35px" /></a>
-                    </div>
-                </div>
-            </div>
         </div>
+        <table class="table table-bordered table-striped mt-5">
+            <thead>
+                <tr>
+                    <th class="table1 color-text">ENFOQUE</th>
+                    <th class="table1">CUANTITATIVO</th>
+                    <th class="table1">CUALITATIVO </th>
+                    <th class="table1">MIXTO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="table2 color-text"> NIVEL INVESTIGATIVO</td>
+                    <td>Exploratorio Descriptivo <br /> Analítico Explicativo </td>
+                    <td>Interpretativo Argumentativo </td>
+                    <td>Cuali-cuantitativo </td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr class="table1">
+                    <td class="table2 color-text"> MÉTODO</td>
+                    <td>Científico Experimental <br />Correlacional Estadístico </td>
+                    <td>Etnográfico, Hermenéutico <br /> Fenomenológico Histórico </td>
+                    <td>Cuali-cuantitativo </td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr>
+                    <td class="table2 color-text"> TIPO DE INSTRUMENTO</td>
+                    <td>Encuesta Test Observaciones <br /> a partir de indicadores</td>
+                    <td>Entrevistas Testimonios Observaciones <br /> (participantes) Historias de vidaDiarios de campo Talleres Conversatorios </td>
+                    <td>En sus técnicas combina instrumentos de investigación</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
