--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -372,90 +372,40 @@
             <div class="col-auto"><img class="img-a md-10 img-fluid" src="assets/images/pages/ilustraciones/24.jpg" /></div>
             </p>
         </div>
-        <div class="row justify-content-center mt-5">
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_2">
-                    <h1 class="text-center color-text">ENFOQUE</h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6"></div>
-                </div>
-                <div class="header-arrow_2">
-                    <p class="text-center mt-5">NIVEL INVESTIGATIVO</p>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">CUANTITATIVO</h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">Exploratorio Descriptivo <br /> Analítico Explicativo</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">CUALITATIVO</h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">Interpretativo Argumentativo </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">MIXTO</h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">Cuali-cuantitativo </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_2">
-                    <h1 class="text-center color-text">METODO</h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6"></div>
-                </div>
-                <div class="header-arrow_2">
-                    <p class="text-center mt-5">TIPO DE INSTRUMENTO</p>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">Científico Experimental <br /> Correlacional Estadístico </h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">EncuestaTest Observaciones <br /> a partir de indicadores</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">Etnográfico, Hermenéutico <br /> Fenomenológico Histórico </h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">Entrevistas Testimonios Observaciones <br />(participantes) Historias de vida Diarios de campo Talleres Conversatorios </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 col-md-3">
-                <div class="header-arrow_1">
-                    <h1 class="text-center">Cuali-cuantitativo </h1>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-6">
-                        <p class="text-center mt-5">En sus técnicas combina <br /> instrumentos de investigación</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <table class="table table-bordered table-striped mt-5">
+            <thead>
+                <tr>
+                    <th class="table1 color-text">ENFOQUE</th>
+                    <th class="table1">CUANTITATIVO</th>
+                    <th class="table1">CUALITATIVO </th>
+                    <th class="table1">MIXTO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="table2 color-text"> NIVEL INVESTIGATIVO</td>
+                    <td>Exploratorio Descriptivo <br /> Analítico Explicativo </td>
+                    <td>Interpretativo Argumentativo </td>
+                    <td>Cuali-cuantitativo </td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr class="table1">
+                    <td class="table2 color-text"> MÉTODO</td>
+                    <td>Científico Experimental <br />Correlacional Estadístico </td>
+                    <td>Etnográfico, Hermenéutico <br /> Fenomenológico Histórico </td>
+                    <td>Cuali-cuantitativo </td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr>
+                    <td class="table2 color-text"> TIPO DE INSTRUMENTO</td>
+                    <td>Encuesta Test Observaciones <br /> a partir de indicadores</td>
+                    <td>Entrevistas Testimonios Observaciones <br /> (participantes) Historias de vidaDiarios de campo Talleres Conversatorios </td>
+                    <td>En sus técnicas combina instrumentos de investigación</td>
+                </tr>
+            </tbody>
+        </table>
         <div class="sub-line mt-5">
             <h2 id="tema-29">2.9. Universo y muestra</h2>
             <p>El universo en estadística es la población o conjunto de elementos totales que cumplen con características especiales para estudiarse en el proyecto de investigación. El universo puede ser finito o infinito.</p>
