--- a/public/pages/glosario.html
+++ b/public/pages/glosario.html
@@ -3,9 +3,12 @@
         <h1>Glosario</h1>
     </div>
     <div class="jumbotron bg-white">
-        <p><strong class="mr-2">Normatividad:</strong>se entiende por normatividad o normativa a las formas institucionales a través de las cuales el comportamiento es configurado socialmente.</p>
-        <p><strong class="mr-2">Ley:</strong>regla o norma establecida por una autoridad superior para regular, de acuerdo con la justicia, algún aspecto de las relaciones sociales.</p>
-        <p> <strong class="mr-2">Decreto:</strong>resolución o decisión que toma una persona o un organismo con autoridad para ello.</p>
-        <p> <strong class="mr-2">Resoluciones administrativas:</strong>en este sentido, es una orden que pronuncia el responsable de un servicio público. Se trata de una norma cuyo alcance está limitado al contexto del servicio en cuestión y cuyo cumplimiento es obligatorio.</p>
+        <p><strong class="mr-2">Ciencia:</strong>entendimiento, inteligencia, razón natural.</p>
+        <p><strong class="mr-2">Conocimiento:</strong>conjunto de conocimientos obtenidos mediante la observación y el razonamiento, sistemáticamente estructurados y de los que se deducen principios y leyes generales con capacidad predictiva y comprobables experimentalmente.</p>
+        <p> <strong class="mr-2">Fenómeno:</strong>indagar para descubrir algo. Investigar un hecho.</p>
+        <p> <strong class="mr-2">Leyes:</strong>regla fija a la que está sometido un fenómeno de la naturaleza. Precepto dictado por la autoridad competente, en que se manda o prohíbe algo, en consonancia con la justicia y para el bien de los gobernados.</p>
+        <p> <strong class="mr-2">Método:</strong>modo de decir o hacer con orden. Modo de obrar o proceder, hábito o costumbre que cada uno tiene y observa.</p>
+        <p> <strong class="mr-2">Metodología:</strong>conjunto de métodos que se siguen en una investigación científica o en una exposición doctrinal.</p>
+        <p> <strong class="mr-2">Paradigma:</strong>teoría o conjunto de teorías cuyo núcleo central se acepta sin cuestionar y que suministra la base y modelo para resolver problemas y avanzar en el conocimiento.</p>
     </div>
 </div>
