--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                                     <li class="list-group-item nav-tema-item">
                                         <div class="row align-items-center">
                                             <div class="col-auto">
-                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold"> <i class="fa fa-play"></i></span></div>
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold"> <i class="fa fa-file-text-o"></i></span></div>
                                             </div>
                                             <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/introduccion/">Introducción</a></span></div>
                                             <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/introduccion/">Ver más</a></div>
@@ -81,17 +81,26 @@
                                             <div class="col-auto">
                                                 <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">1</span></div>
                                             </div>
-                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/componentes-bs/">Componentes</a></span></div>
-                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/componentes-bs/">Ver más</a></div>
+                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/tema-1/">La importancia de investigar</a></span></div>
+                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/tema-1/">Ver más</a></div>
                                         </div>
                                     </li>
                                     <li class="list-group-item nav-tema-item">
                                         <div class="row align-items-center">
                                             <div class="col-auto">
-                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold"> <i class="fa fa-question"></i></span></div>
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">2</span></div>
                                             </div>
-                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/actividad-1/">Actividad didáctica</a></span></div>
-                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/actividad-1/">Ver más</a></div>
+                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/tema-2/">El proyecto de investigación</a></span></div>
+                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/tema-2/">Ver más</a></div>
+                                        </div>
+                                    </li>
+                                    <li class="list-group-item nav-tema-item">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">3</span></div>
+                                            </div>
+                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/tema-3/">Fuentes de Información</a></span></div>
+                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/tema-3/">Ver más</a></div>
                                         </div>
                                     </li>
                                 </ul>
