--- a/public/info.html
+++ b/public/info.html
@@ -23,8 +23,8 @@
                     <div class="curso-portada">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-6">
-                                <h3 class="curso-subtitulo">Tecnología en Desarrollo Publicitario</h3>
-                                <h1 class="curso-titulo">Información del programa</h1>
+                                <h3 class="curso-subtitulo">Ivestigacion </h3>
+                                <h1 class="curso-titulo">Fundamentos de investigación</h1>
                                 <div class="brand-line-primary"></div>
                                 <p class="curso-descripcion">
                                 <ul class="text-white">
