--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,10 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark">
-                            <li> <span>Analizar el contexto productivo según sus características y necesidades</span></li>
+                            <li> <span>Analizar el contexto productivo según sus características y necesidades.</span></li>
+                            <li> <span>Estructurar el proyecto de acuerdo a criterios de la investigación.</span></li>
+                            <li> <span>Argumentar aspectos teóricos del proyecto según referentes nacionales e internacionales.</span></li>
+                            <li> <span>Proponer soluciones a las necesidades del contexto según resultados de la investigación.</span></li>
                         </ul>
                     </div>
                 </div>
