--- a/public/material.html
+++ b/public/material.html
@@ -51,7 +51,10 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark">
-                            <li> <span>Analizar el contexto productivo según sus características y necesidades</span></li>
+                            <li> <span>Analizar el contexto productivo según sus características y necesidades.</span></li>
+                            <li> <span>Estructurar el proyecto de acuerdo a criterios de la investigación.</span></li>
+                            <li> <span>Argumentar aspectos teóricos del proyecto según referentes nacionales e internacionales.</span></li>
+                            <li> <span>Proponer soluciones a las necesidades del contexto según resultados de la investigación.</span></li>
                         </ul>
                     </div>
                 </div>
@@ -238,14 +241,43 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Aprenda Java como si estuviera en primero.</td>
-                                    <td>PDF</td>
-                                    <td> <a href="media/documentos/complementarios/MC_AA2_Aprenda_Java.pdf" target="_blank"><span class="fa fa-download" aria-hidden="true"></span> Descargar</a></td>
+                                    <td>Anexo 1</td>
+                                    <td>Video</td>
+                                    <td> <a href="https://www.youtube.com/watch?v=OJPrmBjwoQA" target="_blank" style="color:#12263F">
+                                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                                <div class="row justify-content-center align-items-center">
+                                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px">
+                                                        <p class="text-center">Anexo</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a></td>
                                 </tr>
                                 <tr>
-                                    <td>Fundamentos de Programación en JAVA</td>
-                                    <td>PDF</td>
-                                    <td> <a href="media/documentos/complementarios/MC_AA2_Fundamentos_Programacion_Java.pdf" target="_blank"><span class="fa fa-download" aria-hidden="true"></span> Descargar </a></td>
+                                    <td>Anexo 2</td>
+                                    <td>Video</td>
+                                    <td> <a href="https://www.youtube.com/watch?v=3_tW-Cg4BSY" target="_blank" style="color:#12263F">
+                                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                                <div class="row justify-content-center align-items-center">
+                                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px">
+                                                        <p class="text-center">Anexo</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a></td>
+                                </tr>
+                                <tr>
+                                    <td>Anexo 3</td>
+                                    <td>Video</td>
+                                    <td> <a href="https://www.youtube.com/watch?v=cya4JCVPc9w" target="_blank" style="color:#12263F">
+                                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                                <div class="row justify-content-center align-items-center">
+                                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px">
+                                                        <p class="text-center">Anexo</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a></td>
                                 </tr>
                             </tbody>
                         </table>
