--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -71,7 +71,7 @@
                     <div class="jumbotron bg-grey_1 borde text-sup">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" /></div>
-                            <p class="text-center">https://scholar.google.com/schhp?hl=es</p>
+                            <p class="text-center">Anexo</p>
                         </div>
                     </div>
                 </a></div>
