--- a/public/pages/material-complementario.html
+++ b/public/pages/material-complementario.html
@@ -13,14 +13,43 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Aprenda Java como si estuviera en primero.</td>
-                    <td>PDF</td>
-                    <td> <a href="media/documentos/complementarios/MC_AA2_Aprenda_Java.pdf" target="_blank"><span class="fa fa-download" aria-hidden="true"></span> Descargar</a></td>
+                    <td>Anexo 1</td>
+                    <td>Video</td>
+                    <td> <a href="https://www.youtube.com/watch?v=OJPrmBjwoQA" target="_blank" style="color:#12263F">
+                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                <div class="row justify-content-center align-items-center">
+                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" />
+                                        <p class="text-center">Anexo</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a></td>
                 </tr>
                 <tr>
-                    <td>Fundamentos de Programación en JAVA</td>
-                    <td>PDF</td>
-                    <td> <a href="media/documentos/complementarios/MC_AA2_Fundamentos_Programacion_Java.pdf" target="_blank"><span class="fa fa-download" aria-hidden="true"></span> Descargar </a></td>
+                    <td>Anexo 2</td>
+                    <td>Video</td>
+                    <td> <a href="https://www.youtube.com/watch?v=3_tW-Cg4BSY" target="_blank" style="color:#12263F">
+                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                <div class="row justify-content-center align-items-center">
+                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" />
+                                        <p class="text-center">Anexo</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a></td>
+                </tr>
+                <tr>
+                    <td>Anexo 3</td>
+                    <td>Video</td>
+                    <td> <a href="https://www.youtube.com/watch?v=cya4JCVPc9w" target="_blank" style="color:#12263F">
+                            <div class="jumbotron bg-grey_1 borde text-sup">
+                                <div class="row justify-content-center align-items-center">
+                                    <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" />
+                                        <p class="text-center">Anexo</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a></td>
                 </tr>
             </tbody>
         </table>
