--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -5,7 +5,7 @@
     <div class="jumbotron bg-white">
         <div class="div-con-fondo1"></div>
         <div class="row justify-content-center align-items-center">
-            <div class="col-auto"><img src="assets/images/pages/ilustraciones/29.jpg" />
+            <div class="col-auto"><img class="img-responsive" src="assets/images/pages/ilustraciones/29.jpg" />
                 <div class="centrado6">Las fuentes de información es el conjunto de documentos y datos confiables que contienen conocimientos útiles para consultarse en el desarrollo de una investigación.</div>
             </div>
         </div>
@@ -81,7 +81,7 @@
             <div class="div-con-fondo1"></div>
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
-                <div class="col-auto"><img class="mt-5" src="assets/images/pages/ilustraciones/36.jpg" />
+                <div class="col-auto"><img class="img-responsive mt-5" src="assets/images/pages/ilustraciones/36.jpg" />
                     <div class="centrado7">El informe de investigación es el documento donde se registran el resultado final del proyecto, lo componen, un título, resumen, introducción, marco teórico, justificación, objetivos y pregunta de investigación, metodología, resultados, discusiones, conclusiones y referencias bibliográficas. Una vez se elabora el informe se renueva el ciclo investigativo, con una nueva pregunta problematizadora que permita continuar profundizando en el tema desarrollado, o un nuevo tema de interés para el investigador.</div>
                 </div>
             </div>
