--- a/public/pages/introduccion.html
+++ b/public/pages/introduccion.html
@@ -6,7 +6,7 @@
         <div class="div-con-fondo">
             <div class="row justify-content-center align-items-center">
                 <div class="col-auto">
-                    <div class="contenedor"></div><img src="assets/images/pages/ilustraciones/1.jpg" />
+                    <div class="contenedor"></div><img class="img-responsive" src="assets/images/pages/ilustraciones/1.jpg" />
                     <div class="texto-encima"></div>
                 </div>
             </div>
