--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -6,7 +6,7 @@
         <div class="div-con-fondo1">
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
-                <div class="col-auto"><img src="assets/images/pages/ilustraciones/5.jpg" />
+                <div class="col-auto"><img class="img-responsive" src="assets/images/pages/ilustraciones/5.jpg" />
                     <div class="centrado1">Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas. En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.</div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
                 <div class="col-auto">
-                    <div class="contenedor4"><img src="assets/images/pages/ilustraciones/18.jpg" />
+                    <div class="contenedor4"><img class="img-responsive" src="assets/images/pages/ilustraciones/18.jpg" />
                         <div class="texto-encima4"></div>
                         <div class="centrado4">Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</div>
                     </div>
@@ -427,7 +427,7 @@
             <div class="div-con-fondo1"></div>
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
-                <div class="col-auto"><img src="assets/images/pages/ilustraciones/28.jpg" />
+                <div class="col-auto"><img class="img-responsive" src="assets/images/pages/ilustraciones/28.jpg" />
                     <div class="centrado4 color-text"> Las conclusiones son el resultado final de la investigación, en este espacio se interpretan, comparan y analizan los datos obtenidos de la investigación. Su análisis está determinado acorde con los objetivos y resultados planteados desde una síntesis del proyecto. De igual manera deben contener una reflexión final identificando cómo contribuye el proyecto en la generación de nuevos conocimientos en el área objeto de estudio.</div>
                 </div>
             </div>
