--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
                 <div class="row">
                     <div class="col-12 col-md-5">
                         <h3 class="footer-subtitulo mb-4">ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES </h3>
-                        <p class="footer-texto mb-2"><strong>Ingry Dayanna Bonilla Monzon </strong><br /> <span class="text-small">Líder del equipo</span></p>
+                        <p class="footer-texto mb-2"><strong>Maria Camila Garcia Santamaria</strong><br /> <span class="text-small">Líder del equipo</span></p>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -128,41 +128,28 @@
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Contenido Instruccional
                         </h4>
-                        <p class="footer-texto mb-2"><strong>Gloria Matilde Lee Mejía </strong><br /> <span class="text-small">Responsable del equipo</span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Comercio y Servicios</span><br /><span class="text-small">Regional Tolima</span></p>
                         <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander </span></p>
-                        <p class="footer-texto mb-2"><strong>Fernando Martínez Rivera</strong><br /><span class="text-small">Experto temático<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Coordinación Complementaria-UTI-CSF-Bogotá</span><br /><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Oscar Absalón Guevara</strong><br /> <span class="text-small">Diseñador instruccional<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Gestión Empresarial</span><br /><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Andrés Felipe Velandia Espitia</strong><br /> <span class="text-small">Evaluador instruccional<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología</span><br /><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br /> <span class="text-small">Corrección de estilo<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica</span><br /><span class="text-small">Regional Distrito Capital </span></p>
+                        <p class="footer-texto mb-2"><strong>Marisol Osorio Beltrán</strong><br /><span class="text-small">Experta temática<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br /><span class="text-small">Regional Antioquia</span></p>
+                        <p class="footer-texto mb-2"><strong>Luz Mila Pacheco Fuente</strong><br /> <span class="text-small">Diseñadora instruccional<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología Regional </span><br /><span class="text-small">Regional Distrito Capital</span></p>
+                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica </span><br /><span class="text-small">Regional Distrito Capital</span></p>
                     </div>
                     <div class="col-12 col-md-6">
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Diseño y desarrollo de recursos educativos digitales
                         </h4>
-                        <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span></p>
-                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span></p>
-                        <p class="footer-texto"> <strong>Camilo Andrés Villamizar Lizcano</strong><br />
-                            <strong>Ernesto Navarro Jaimes</strong><br />
-                            <strong>Eulises Orduz Amezquita</strong><br />
-                            <strong>Maria Camila Ovalle Ospina </strong><br />
-                            <strong>Yazmin Rocio Figueroa Pacheco</strong><br /><span class="text-small">Diseño web & producción audiovisual<br /></span></p>
-                        <p class="footer-texto"><strong>Edgar Mauricio Cortes</strong><br />
-                            <strong>Magdi Khalifah Gamboa</strong><br />
-                            <strong>Gustavo Adolfo Marún Suárez</strong><br />
-                            <strong>Ricardo Alfonso González Vargas</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
+                        <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón </strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Oleg Litvin</strong><br /> <span class="text-small">Productor Audiovisual<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
-                        <p class="footer-texto"><strong>Alba Ines Gutierrez Gonzalez </strong><br />
-                            <strong>Fernando Amortegui </strong><br />
-                            <strong>Daniel Felipe Varon Molina </strong><br /> <span class="text-small">Validación de recursos.<br /></span></p>
+                        <p class="footer-texto"><strong>Milady Tatiana Villamil Castellanos</strong><br /> <span class="text-small">Validación de recursos.<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
                     </div>
                 </div>
