--- a/public/pages/1-tema.html
+++ b/public/pages/1-tema.html
@@ -5,16 +5,14 @@
     <div class="jumbotron bg-white">
         <div class="sub-line mt-5">
             <h2 id="tema-11">1.1. ¿Por qué Investigar? </h2>
-        </div>
-        <table class="default">
-            <tr>
-                <td><img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/3.jpg" /></td>
-                <td>
-                    <p>La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes. </p>
+            <div class="row justify-content-center align-items-center mt-5">
+                <div class="col-auto"> <img class="img-a img-fluid" src="assets/images/pages/ilustraciones/3.jpg" /></div>
+                <div class="col">
+                    <p>La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes.</p>
                     <p>Un proyecto de investigación formativa es una herramienta que ayuda al desarrollo de habilidades para la solución creativa de problemas. Entender cómo a partir de la búsqueda sistemática de información y la estructuración metodológica del proyecto se fomentan nuevas oportunidades para el aprendizaje y el mundo laboral.</p>
-                </td>
-            </tr>
-        </table>
+                </div>
+            </div>
+        </div>
         <div class="sub-line mt-5">
             <h2 id="tema-12">1.2. La investigación en el SENA </h2>
             <table class="default">
