--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -11,15 +11,15 @@
         </div>
         <div class="sub-line mt-5">
             <h2 class="mt-5" id="tema-31">3.1. Fuentes primarias y secundarias</h2>
-            <div class="row mt-5 align-items-stretch">
-                <div class="col-md-6 col-lg-6"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/head.png" />
-                    <div class="jumbotron bg-grey borde text-sup">
-                        <p class="text-center">Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones de primera mano, cartas entre otras. Sus principales características es su originalidad como evidencia directa de su autordatos</p>
+            <div class="card-deck">
+                <div class="card card_grey">
+                    <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/head.png" />
+                        <P class="text left mt-5">Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones de primera mano, cartas entre otras. Sus principales características es su originalidad como evidencia directa de su autordatos </P>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/book.png" />
-                    <div class="jumbotron bg-grey borde text-sup">
-                        <p class="text-center">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.</p>
+                <div class="card card_grey">
+                    <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/book.png" />
+                        <P class="text left mt-5">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.</P>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <div class="jumbotron bg-grey_1 borde text-sup">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" /></div>
-                            <p class="text-center">Anexo</p>
+                            <p class="text-center">https://scholar.google.com/schhp?hl=es</p>
                         </div>
                     </div>
                 </a></div>
