--- a/public/material.html
+++ b/public/material.html
@@ -140,14 +140,14 @@
                         <div class="div-con-fondo">
                             <div class="row justify-content-center align-items-center">
                                 <div class="col-auto">
-                                    <div class="contenedor"></div><img class="img-responsive" src="assets/images/pages/ilustraciones/1.jpg">
-                                    <div class="texto-encima"></div>
+                                    <div class="contenedor"></div><img class="img-responsive" src="assets/images/pages/ilustraciones/1.svg">
                                 </div>
                             </div>
-                            <div class="centrado color-text">La excelencia en el mundo laboral requiere de personas con capacidades extraordinarias, lo que significa hacer algo más de lo ordinario. Hoy además de manejar y entender las aplicaciones tecnológicas, hablar una segunda lengua, aprender conocimientos técnicos especializados y tener una mirada global para soluciones locales, se requiere de capacidades para investigar y organizar el pensamiento con métodos de trabajo enfocados en la solución de problemas y creación de valor en la empresa. La formación para el presente y futuro debe integrar conocimientos básicos en ciencias, capacidad para resolver problemas, manejo de las matemáticas, comunicación y trabajo en equipo, como estrategia fundamental para desempeñarse en cualquier profesión y oficio. (Guijosa, 2018).</div>
                         </div>
                         <div class="row justify-content-center mt-5">
-                            <div class="col-4 col-md-5"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/2.jpg"></div>
+                            <div class="col-4 col-md-5">
+                                <div class="bg-color-azul"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/2.jpg"></div>
+                            </div>
                             <div class="col-8 col-md-6">
                                 <p>Este componente formativo tiene como finalidad que el aprendiz desarrolle capacidades argumentativas, propositivas, e interpretativas, a partir de aprender a estructurar el proyecto de investigación de acuerdo con principios y métodos sistemáticos, requeridos para la solución creativa de problemáticas identificadas en el contexto social y productivo</p>
                                 <p>Desde esta perspectiva la investigación es el eje fundamental para el desarrollo de competencias habilitadoras para las profesiones del futuro, el aprender a investigar, buscar información, organizar y gestionar conocimiento en función de resolver problemas y agregar valor en los procesos, es la realidad y necesidad del mercado actual.</p>
@@ -164,16 +164,14 @@
                     <div class="jumbotron bg-white">
                         <div class="sub-line mt-5">
                             <h2 id="tema-11">1.1. ¿Por qué Investigar? </h2>
-                        </div>
-                        <table class="default">
-                            <tr>
-                                <td><img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/3.jpg"></td>
-                                <td>
-                                    <p>La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes. </p>
+                            <div class="row justify-content-center align-items-center mt-5">
+                                <div class="col-auto"> <img class="img-a img-fluid" src="assets/images/pages/ilustraciones/3.jpg"></div>
+                                <div class="col">
+                                    <p>La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes.</p>
                                     <p>Un proyecto de investigación formativa es una herramienta que ayuda al desarrollo de habilidades para la solución creativa de problemas. Entender cómo a partir de la búsqueda sistemática de información y la estructuración metodológica del proyecto se fomentan nuevas oportunidades para el aprendizaje y el mundo laboral.</p>
-                                </td>
-                            </tr>
-                        </table>
+                                </div>
+                            </div>
+                        </div>
                         <div class="sub-line mt-5">
                             <h2 id="tema-12">1.2. La investigación en el SENA </h2>
                             <table class="default">
