--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -71,7 +71,7 @@
                     <div class="jumbotron bg-grey_1 borde text-sup">
                         <div class="row justify-content-center align-items-center">
                             <div class="col-auto"><img src="assets/images/pages/ilustraciones/w.png" alt="" style="width:55px" /></div>
-                            <p class="text-center">https://scholar.google.com/schhp?hl=es</p>
+                            <p class="text-center">Google académico</p>
                         </div>
                     </div>
                 </a></div>
@@ -81,7 +81,7 @@
             <div class="div-con-fondo1"></div>
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
-                <div class="col-auto"><img class="img-responsive mt-5" src="assets/images/pages/ilustraciones/36.jpg" />
+                <div class="col-auto"><img class="mt-5 img-float-1" src="assets/images/pages/ilustraciones/36.jpg" />
                     <div class="centrado7">El informe de investigación es el documento donde se registran el resultado final del proyecto, lo componen, un título, resumen, introducción, marco teórico, justificación, objetivos y pregunta de investigación, metodología, resultados, discusiones, conclusiones y referencias bibliográficas. Una vez se elabora el informe se renueva el ciclo investigativo, con una nueva pregunta problematizadora que permita continuar profundizando en el tema desarrollado, o un nuevo tema de interés para el investigador.</div>
                 </div>
             </div>
