--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -6,7 +6,9 @@
         <div class="div-con-fondo1">
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
-                <div class="col-auto"><img class="img-responsive" src="assets/images/pages/ilustraciones/5.png" /></div>
+                <div class="col-auto"><img class="img-float-1" src="assets/images/pages/ilustraciones/5.jpg" />
+                    <div class="centrado1">Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas. En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.</div>
+                </div>
             </div>
         </div>
         <div class="row justify-content-center mt-5">
@@ -156,7 +158,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
                 <div class="col-auto">
-                    <div class="contenedor4"><img class="img-responsive" src="assets/images/pages/ilustraciones/18.jpg" />
+                    <div class="contenedor4"><img class="img-float-1" src="assets/images/pages/ilustraciones/18.jpg" />
                         <div class="texto-encima4"></div>
                         <p class="centrado4 md-6"> Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</p>
                     </div>
@@ -169,7 +171,7 @@
         </div>
         <div class="row justify-content-center mt-5">
             <div class="col-6 col-md-5">
-                <div class="col"><img class="img-responsive img-a img-fluid" src="assets/images/pages/ilustraciones/19.png" /></div>
+                <div class="col"><img class="img-a img-float" src="assets/images/pages/ilustraciones/19.png" /></div>
             </div>
             <div class="col-6 col-md-5">
                 <div class="col">
@@ -357,7 +359,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
                 <div class="col-auto"><img src="assets/images/pages/ilustraciones/23.jpg" />
-                    <div class="centrado1"><b>¿Cuáles son las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto? </b> Según esta pregunta, podríamos establecer por ejemplo en el marco teórico los siguientes temas: Mortalidad por enfermedad, accidentalidad, violencia entre otras. Cada uno de los conceptos mencionados tienen como finalidad sustentar la investigación desde las teorías existentes y con base en ello, se construye el marco teórico de la investigación. Para la construcción del fundamento teórico, es importante buscar en fuentes de información confiables, como bases de datos, libros, tesis, documentos técnicos especializados, autores reconocidos.</div>
+                    <div class="centrado1"><b>¿Cuáles son las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto?</b> Según esta pregunta, podríamos establecer por ejemplo en el marco teórico los siguientes temas: Mortalidad por enfermedad, accidentalidad, violencia entre otras. Cada uno de los conceptos mencionados tienen como finalidad sustentar la investigación desde las teorías existentes y con base en ello, se construye el marco teórico de la investigación. Para la construcción del fundamento teórico, es importante buscar en fuentes de información confiables, como bases de datos, libros, tesis, documentos técnicos especializados, autores reconocidos.</div>
                 </div>
             </div>
         </div>
@@ -406,13 +408,13 @@
             <p>El universo en estadística es la población o conjunto de elementos totales que cumplen con características especiales para estudiarse en el proyecto de investigación. El universo puede ser finito o infinito.</p>
             <div class="card-deck">
                 <div class="card card_grey">
-                    <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/25.svg" />
+                    <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/25.png" />
                         <p class="card-text text-center mt-5"><strong>UNIVERSO FINITO</strong></p>
                         <P class="text-center">Es la población de elementos totales que se puede contar o medir, por ejemplo, la población de una ciudad. </P>
                     </div>
                 </div>
                 <div class="card card_grey">
-                    <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/26.svg" />
+                    <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/26.png" />
                         <p class="card-text text-center mt-4"><strong>UNIVERSO INFINITO</strong></p>
                         <P class="text-center">Es el conjunto de elementos que no se pueden contar o medir, por ejemplo, la cantidad de árboles de la región.</P>
                     </div>
